--- a/Calculator/index.html
+++ b/Calculator/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/style.css">
-    <title>Calculator</title>
+    <title>Calculator IOS</title>
 </head>
 <body>
     <div class="wrapper">
@@ -14,34 +14,34 @@
                     <p>.</p> 
                 </div>
                 <section class="buttons">
-                    <div class="buttons__row buttons__row_1">
-                        <button class="btn-clearAll">AC</button>
-                        <button class="btn-plusMinus">+/–</button>
-                        <button class="btn-operation__percent">%</button>
-                        <button class="btn-operation__divison">÷</button>
+                    <div class="buttons__row">
+                        <button class="row__grey row__grey_clearAll">AC</button>
+                        <button class="row__grey row__grey_plusMinus">+/–</button>
+                        <button class="row__grey row__grey_percent">%</button>
+                        <button class="row__orange row__orange_divison">÷</button>
                     </div>
-                    <div class="buttons__row buttons__row_2">
-                        <button class="btn-number">7</button>
-                        <button class="btn-number">8</button>
-                        <button class="btn-number">9</button>
-                        <button class="btn-operation__multiplication">X</button>
+                    <div class="buttons__row">
+                        <button class="row__darkgrey row__darkgrey__number">7</button>
+                        <button class="row__darkgrey row__darkgrey__number">8</button>
+                        <button class="row__darkgrey row__darkgrey__number">9</button>
+                        <button class="row__orange row__orange_multiplication">X</button>
                     </div>
-                    <div class="buttons__row buttons__row_3">
-                        <button class="btn-number">4</button>
-                        <button class="btn-number">5</button>
-                        <button class="btn-number">6</button>
-                        <button class="btn-operation__substraction">–</button>
+                    <div class="buttons__row">
+                        <button class="row__darkgrey row__darkgrey__number">4</button>
+                        <button class="row__darkgrey row__darkgrey__number">5</button>
+                        <button class="row__darkgrey row__darkgrey__number">6</button>
+                        <button class="row__orange row__orange_substraction">–</button>
                     </div>  
-                    <div class="buttons__row buttons__row_4">
-                        <button class="btn-number">1</button>
-                        <button class="btn-number">2</button>
-                        <button class="btn-number">3</button>
-                        <button class="btn-operation__sum">+</button>
+                    <div class="buttons__row">
+                        <button class="row__darkgrey row__darkgrey__number">1</button>
+                        <button class="row__darkgrey row__darkgrey__number">2</button>
+                        <button class="row__darkgrey row__darkgrey__number">3</button>
+                        <button class="row__orange row__orange_sum">+</button>
                     </div>
-                    <div class="buttons__row buttons__row_5">
-                        <button class="btn-number btn-number__null">0</button>
-                        <button class="btn-point">.</button>
-                        <button class="btn-result">=</button>
+                    <div class="buttons__row">
+                        <button class="row__darkgrey row__darkgrey_null">0</button>
+                        <button class="row__darkgrey row__darkgrey__point">.</button>
+                        <button class="row__orange row__orange_result">=</button>
                     </div>
                 </section>
         </div>
